* Fixed necro bug * Fixed Fountain effect level 9 * half-fixed scoreboard bug with IMR value (now if the value is nil it doesn't break the end screen)
Former-commit-id: 53a8c2f63739cac4318cab16acf423fbf4f18d8f

--- a/content/dota_addons/dota_imba/panorama/styles/custom_game/multiteam_end_screen.css
+++ b/content/dota_addons/dota_imba/panorama/styles/custom_game/multiteam_end_screen.css
@@ -507,8 +507,7 @@
 #ImbaXP23
 {
 	margin-top: 3px;
-	margin-left: 34%;
-	width: 100%;
+	margin-left: 10%;
 	font-size: 15px;
 	font-weight: bold;
 	color: white;
