--- a/content/dota_addons/dota_imba/panorama/styles/custom_game/multiteam_flyout_scoreboard.css
+++ b/content/dota_addons/dota_imba/panorama/styles/custom_game/multiteam_flyout_scoreboard.css
@@ -287,7 +287,6 @@
 #ImbaXPRank22,
 #ImbaXPRank23
 {
-	margin-top: 3px;
 	margin-right: 5%;
 	font-size: 16px;
 	font-weight: bold;
